# sentinel-archive-ui

./: MANIFEST.in  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
docassemble/sarkui/: io.py  schema.py
docassemble/sarkui/data/questions/: datafile.yml  metadata.yml
tests/: conftest.py  test_io.py  test_schema.py
