[project]
name = "docassemble-sarkui"
version = "0.1.dev0"
description = "A Q&A driven UI for SENTINEL archive"
repository = "https://github.com/sentinel-energy/sentinel-archive-ui"
keywords = ["datapackage", "SENTINEL", "archive", "ui"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]

[dependencies]

[dev-dependencies]

[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4" ]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.github
  | \.mypy_cache
  | \.pytest_cache
  | \.vscode
  | _build
  | build
  | dist
  | .*\.egg-info

  # directories without python source files
  | testing/data
  | tmp
  | htmlcov
  | dsts
)/
'''
